# depthai-test

./: .gitmodules  CMakeLists.txt
src/: main.cpp
